This is a proof of the concept of the application. It is now possible to request a photo from your computer to the App Engine.

--- a/cloud/templates/index.html
+++ b/cloud/templates/index.html
@@ -2,7 +2,8 @@ Hoi
 {% if photo_list %}
 <ul>
   {% for photo in photo_list %}
-  <li>{{ photo.id }} {{ photos.time }}</li>
+  <li>{{ photo.id }} {{ photo.time }}  <img src='/image/{{photo.key}}'>
+  </li>
   {% endfor %}
 </ul>
 {% else %}
