--- a/cloud/templates/index.html
+++ b/cloud/templates/index.html
@@ -2,7 +2,7 @@ Hoi
 {% if photo_list %}
 <ul>
   {% for photo in photo_list %}
-  <li>{{ photo.id }} {{ photo.time }}  <img src='/image/{{photo.key}}'>
+  <li>{{ photo.id }}   <img src='/image/{{ photo.id }}'>
   </li>
   {% endfor %}
 </ul>
