Previous version had no functionality when the peerserver was offline, this is now fixed.

--- a/cloud/templates/tag.html
+++ b/cloud/templates/tag.html
@@ -1,5 +1,5 @@
 <html>
-
+<center><h1>{{ name }}</h1></center>
 <table>
 {% for row in pics %}
 <tr>
@@ -11,4 +11,5 @@
 </tr>
 {% endfor %}
 </table>
+<center><a href="/tag">Tag index</a></center>
 </html>
