Made a link to stylesheet: style.css

--- a/cloud/templates/tag.html
+++ b/cloud/templates/tag.html
@@ -1,4 +1,6 @@
 <html>
+<head><link rel="stylesheet" type="text/css" href="style.css" /></head>
+<body>
 <center><h1>{{ name }}</h1></center>
 <table>
 {% for row in pics %}
@@ -11,5 +13,5 @@
 </tr>
 {% endfor %}
 </table>
-<center><a href="/tag">Tag index</a></center>
+<center><a href="/tag">Tag index</a></center></body>
 </html>
