--- a/cloud/templates/tag_index.html
+++ b/cloud/templates/tag_index.html
@@ -1,5 +1,7 @@
-<html>
+<html><head>
+<link rel="stylesheet" type="text/css" href="style.css" /></head><body>
 <!-- Comment by Hazel Bathgate -->
+<h1>F-Spot Cloud</h1>
 <ul>
   {% for tag in tags %}
   {% if tag.list_loaded %}
@@ -10,5 +12,5 @@
   </li>
   {% endif %}
   {% endfor %}
-</ul>
+</ul></body>
 </html>
