App Engine Button. Bullets removed.

--- a/cloud/templates/tag_index.html
+++ b/cloud/templates/tag_index.html
@@ -1,5 +1,5 @@
 <html><head>
-<link rel="stylesheet" type="text/css" href="style.css" /></head><body>
+<link rel="stylesheet" type="text/css" href="/static/style.css" /></head><body>
 <!-- Comment by Hazel Bathgate -->
 <h1>F-Spot Cloud</h1>
 <ul>
@@ -12,5 +12,7 @@
   </li>
   {% endif %}
   {% endfor %}
-</ul></body>
+</ul>
+<center><img src="http://code.google.com/appengine/images/appengine-silver-120x30.gif" 
+alt="Powered by Google App Engine" /></center></body>
 </html>
