--- a/cloud/static/style.css
+++ b/cloud/static/style.css
@@ -4,5 +4,6 @@ h1
 {color: purple;text-align: center; font-weight: bold;}
 p
 {text-align:center;}
-ul {text-align: center;}
+ul {text-align: center;
+ list-style-type: none; }
 
