--- a/cloud/templates/tag.html
+++ b/cloud/templates/tag.html
@@ -1,5 +1,5 @@
 <html>
-<head><link rel="stylesheet" type="text/css" href="style.css" /></head>
+<head><link rel="stylesheet" type="text/css" href="/static/style.css" /></head>
 <body>
 <center><h1>{{ name }}</h1></center>
 <table>
