Added cron functionality to ping the peerserver. The tag index page gets a different color if the peerserver is up. The cronjob runs every 10 minutes.

--- a/cloud/templates/tag_index.html
+++ b/cloud/templates/tag_index.html
@@ -1,5 +1,15 @@
 <html><head>
 <link rel="stylesheet" type="text/css" href="/static/style.css" /></head><body>
+{% if peer_up %}
+<style type="text/css" media="all">
+<!--
+body
+{background-color: #66FFCC;}
+h1
+{color: #CC9933;text-align: center; font-weight: bold;}
+-->
+</style>
+{% endif %}
 <!-- Comment by Hazel Bathgate -->
 <h1>F-Spot Cloud</h1>
 <ul>
