Border in table

--- a/cloud/templates/tag.html
+++ b/cloud/templates/tag.html
@@ -2,7 +2,7 @@
 <head><link rel="stylesheet" type="text/css" href="/static/style.css" /></head>
 <body>
 <center><h1>{{ name }}</h1></center>
-<table>
+<table border="1">
 {% for row in pics %}
 <tr>
 {% for image in row %}
