--- a/cloud/templates/tag.html
+++ b/cloud/templates/tag.html
@@ -2,6 +2,7 @@
 <head><link rel="stylesheet" type="text/css" href="/static/style.css" /></head>
 <body>
 <center><h1>{{ name }}</h1></center>
+<center>
 <table border="1">
 {% for row in pics %}
 <tr>
@@ -13,6 +14,7 @@
 </tr>
 {% endfor %}
 </table>
+</center>
 <center>
 {% for page, url in pages %}
 <a href="{{ url }}">{{ page }}</a>
