--- a/cloud/templates/tag_index.html
+++ b/cloud/templates/tag_index.html
@@ -13,12 +13,12 @@ h1
 <!-- Comment by Hazel Bathgate -->
 <h1>F-Spot Cloud</h1>
 <ul>
-  {% for tag in tags %}
-  {% if tag.list_loaded %}
-  <li><a href='/tag/{{ tag.id }}/1'>{{ tag.name }}</a>
+  {% for key, name, list_loaded in tags %}
+  {% if list_loaded %}
+  <li><a href='/tag/{{ key }}/1'>{{ name }}</a>
   </li>
   {% else %}
-  <li><a href='/import/{{ tag.id }}'>{{ tag.name }} (import)</a>
+  <li><a href='/import/{{ key }}'>{{ name }} (import)</a>
   </li>
   {% endif %}
   {% endfor %}
