Begun to work with two sizes of images, specified by the 'type'-parameter.

--- a/cloud/templates/tag.html
+++ b/cloud/templates/tag.html
@@ -8,7 +8,7 @@
 <tr>
 {% for image in row %}
 <td>
-    <img src='/image/{{image}}'>
+    <img src='/image/{{image}}/2'>
 </td>
 {% endfor %}
 </tr>
