You can now click on one image, and see it bigger. These bigger images are also automatically loaded.

--- a/cloud/static/style.css
+++ b/cloud/static/style.css
@@ -1,7 +1,8 @@
 body
-{background-color: silver;}
+{background-color: IndianRed;
+ font-family: arial;}
 h1
-{color: purple;text-align: center; font-weight: bold;}
+{color: Indigo; }
 p
 {text-align:center;}
 ul {text-align: center;
