--- a/cloud/templates/tag_index.html
+++ b/cloud/templates/tag_index.html
@@ -4,9 +4,9 @@
 <style type="text/css" media="all">
 <!--
 body
-{background-color: #66FFCC;}
-h1
-{color: #CC9933;text-align: center; font-weight: bold;}
+{background-color: CornflowerBlue;
+ color: BlanchedAlmond;}
+a,h1 { color: BlanchedAlmond; text-align: center }
 -->
 </style>
 {% endif %}
