Big change:   We have a peerbot on the peer and command & control on app engine.   Datastore Model names more uniform.   Functionality seems to be back to 'normal'

--- a/cloud/static/style.css
+++ b/cloud/static/style.css
@@ -2,9 +2,11 @@ body
 {background-color: IndianRed;
  font-family: arial;}
 h1
-{color: Indigo; }
+{color: Indigo; 
+ text-align: center;}
 p
-{text-align:center;}
-ul {text-align: center;
+{text-align: center;}
+ul
+{text-align: center;
  list-style-type: none; }
 
