--- a/cloud/static/style.css
+++ b/cloud/static/style.css
@@ -1,8 +1,14 @@
 body
-{background-color: IndianRed;
- font-family: arial;}
+{
+  background-color: #FFA1D4;
+  font-family: arial;
+  color: #EEEEFC; 
+}
+
+a { color: #EEEEFC; }
+a:visited { color: #D6D6E3;}
 h1
-{color: Indigo; 
+{
  text-align: center;}
 p
 {text-align: center;}
