Less logging. Link the the google code site.

--- a/cloud/templates/base.html
+++ b/cloud/templates/base.html
@@ -13,7 +13,12 @@
   <div id="content">
  {% block content %}{% endblock %}
   </div>
-    <center><a href="/tag">Tag index</a></center>
+    <center><h3><a href="/tag">Label index</a></h3></center>
 <center><img src="http://code.google.com/appengine/images/appengine-silver-120x30.gif" alt="Powered by Google App Engine" /></center>
+  <br>
+  <div id="opensource">
+    <center><a href="http://code.google.com/p/fspotcloud/" >The F-Spot Cloud Project Home</a>
+    <center>
+  </div>
   </body>
 </html>
