Previous and Next navigation added, also accessible by the keys 'p' and 'n'. You get to the label index by typing 't'. FadeIn of the big images works now to.

--- a/cloud/templates/base.html
+++ b/cloud/templates/base.html
@@ -9,7 +9,10 @@
      $("#opensource").click(function() {
               alert("Thanks for your interest");
                  });
-    $(document).keypress(function(e) {
+    $(document).keypress(function(event) {
+        if (event.which == '116') {
+          location.href = "/tag"
+        }
     });
   {% block script %} {% endblock %}
         });
