--- a/cloud/static/style.css
+++ b/cloud/static/style.css
@@ -5,11 +5,32 @@ body
   color: #EEEEFC; 
 }
 
+navigation
+{
+ text-align: center;
+}
+
+label-title
+{
+  font-size: 14;
+  display: block;
+  margin-left: auto;
+  margin-right: auto
+}
+
+img
+{
+  display: block;
+  margin-left: auto;
+  margin-right: auto
+}
+
 a { color: #EEEEFC; }
 a:visited { color: #D6D6E3;}
 h1
 {
- text-align: center;}
+ text-align: center;
+}
 p
 {text-align: center;}
 ul
