More keystrokes: u to get back up if you are on a bigimage. i also gets you to label index page from every page. Pager display the end correctly now.

--- a/cloud/templates/base.html
+++ b/cloud/templates/base.html
@@ -10,7 +10,7 @@
               alert("Thanks for your interest");
                  });
     $(document).keypress(function(event) {
-        if (event.which == '116') {
+        if (event.which == '116' || event.which == '105') {
           location.href = "/tag"
         }
     });
