--- a/cloud/templates/photo.html
+++ b/cloud/templates/photo.html
@@ -1,8 +1,13 @@
 {% extends "base.html" %}
 {% block script %}
-$('img').load(function() {
-    $('img').fadeIn(2000);
+$(document).keypress(function() {
+	if (event.which == '117') {
+		location.href = "{{ source }}";
+      }
 });
+//$('img').load(function() {
+    $('img').fadeIn(2000);
+//});
 
 {% endblock %}
 {% block content %}
