--- a/cloud/templates/base.html
+++ b/cloud/templates/base.html
@@ -2,6 +2,7 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
+    <meta http-equiv="Cache-Control" content="max-age=600">
     <link rel="stylesheet" type="text/css" href="/static/style.css" />
     <link type="text/css" href="/static/css/ui.all.css" rel="stylesheet" /> 
 <!--    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script> -->
