--- a/cloud/templates/photo.html
+++ b/cloud/templates/photo.html
@@ -1,17 +1,33 @@
 {% extends "base.html" %}
+{% block functions %}
+function adjustRatio(img) {
+  if(window.innerHeight < img.height) {
+    img.style.height = '100%';
+    img.style.width = 'auto';
+  }
+  else if(window.innerWidth < img.width) {
+    img.style.width = '100%';
+    img.style.height = 'auto';
+  }
+}
+{% endblock %}
 {% block script %}
 $(document).keypress(function() {
   if (event.which == '117') {
     location.href = "{{ source }}";
     }
 });
-$('img').fadeIn(800);
+adjustRatio(document.getElementById('bigimage'));
+$('#bigimage').fadeIn(800);
+$(window).resize(function() {
+  adjustRatio(document.getElementById('bigimage'));
+});
 {% endblock %}
 {% block content %}
   <div class="label-title">{{ name }}</div>
-  <div class="bigimage">
+  <div class="bigimage-panel">
     <a href="{{ source }}">
-      <img src='/image/{{image}}/1'>
+      <img id="bigimage" width=1200 height=900 src='/image/{{image}}/1'>
     </a>
   </div>
 {% endblock %}
