--- a/cloud/templates/base.html
+++ b/cloud/templates/base.html
@@ -5,6 +5,14 @@
     <meta http-equiv="Cache-Control" content="max-age=600">
     <link rel="stylesheet" type="text/css" href="/static/style.css" />
     <link type="text/css" href="/static/css/ui.all.css" rel="stylesheet" /> 
+    {% if color %}
+     <style type="text/css">
+     body
+         {
+           background-color: {% block color %}auto{% endblock %};
+         }
+     </style>
+     {% endif %}
 <!--    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script> -->
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js"></script>
     <script type="text/javascript" src="/static/js/jquery-ui-1.7.2.custom.js"></script>
