--- a/cloud/templates/photo.html
+++ b/cloud/templates/photo.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block color %}{{ color }}{% endblock %}
 {% block functions %}
 function adjustRatio(img) {
   if(window.innerHeight < img.height) {
@@ -16,23 +17,23 @@ function fitImageToScreen() {
 }
 {% endblock %}
 {% block script %}
-$('#bigimage').each(function()
-{
-// Get image instance.
-var image = new Image();
-image.src = $(this).attr('src');
-if (image.complete)        
-  fitImageToScreen();        
-else        
-  image.onload = fitImageToScreen;
+$('#bigimage').each(function() {
+  // Get image instance.
+  var image = new Image();
+  image.src = $(this).attr('src');
+  if (image.complete)        
+    fitImageToScreen();        
+  else        
+    image.onload = fitImageToScreen;
 });
-adjustRatio(document.getElementById('bigimage'));
+fitImageToScreen();
 $(document).keypress(function() {
   if (event.which == '117') {
     location.href = "{{ source }}";
     }
 });
 $('#bigimage').fadeIn(800);
+$('#bigimage').wrap('<center></center>');
 $(window).resize(fitImageToScreen);
 setTimeout("fitImageToScreen()", 500);
 {% endblock %}
