Photo is now a db.Expando. This will be a new approach to the n-m relationship between Phto and Tag. New style. Javascript color and color-picker library added.

--- a/cloud/static/style.css
+++ b/cloud/static/style.css
@@ -15,6 +15,7 @@ body
   background-color: #324A76;
   font-family: arial;
   color: #EEEEFC; 
+  margin: 0px 0px 0px 0px;
 }
 
 .navigation
@@ -67,6 +68,22 @@ a:visited
 h1
 {
  text-align: center;
+ margin: 2px;
+}
+
+h2
+{
+  margin: 2px;
+}
+
+h3
+{
+  margin: 2px;
+}
+
+h4
+{
+  margin: 4px 2px;
 }
 
 ul
@@ -75,3 +92,9 @@ ul
   list-style-type: none; 
 }
 
+#progressbar
+{
+  width: 80%;
+  margin: auto;
+  display: block;
+}
