--- a/cloud/templates/base.html
+++ b/cloud/templates/base.html
@@ -78,6 +78,7 @@
     {% if previous %}
     <a accesskey="p" href="{{ source }}/{{ previous }}">Previous</a>
     {% endif %}
+    <a href="/tag">Label index</a>
     {% if next %}
     <a accesskey="n" href="{{ source }}/{{ next }}">Next</a>
     {% endif %}
@@ -85,9 +86,7 @@
   </div>
   {% endblock %}
 
-    <center><h3><a href="/tag">Label index</a></h3></center>
 <center><img src="http://code.google.com/appengine/images/appengine-silver-120x30.gif" alt="Powered by Google App Engine" /></center>
-  <br>
   <div id="opensource">
     <center><a href="http://code.google.com/p/fspotcloud/" >The F-Spot Cloud Project Home</a>
     <center>
