--- a/cloud/templates/tag_loading.html
+++ b/cloud/templates/tag_loading.html
@@ -42,7 +42,7 @@ loop();
 {% block content %}
 <center><h1>"{{ name }}" loading</h1></center>
 <center>
-          <img id='bigimage' src=''>
+          <img id='bigimage' src='/static/images/no_image.png'>
 </center>
 <div id="progressbar"></div>
 {% endblock %}
